--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,13 @@ version: '3.1'
 
 services:
   api_gateway:
+    container_name: api_gateway
     image: nginx:alpine
     ports:
       - "80:80"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./nginx/services:/etc/nginx/conf.d/
+      - ./api_gateway/nginx.conf:/etc/nginx/nginx.conf
+      - ./api_gateway/services:/etc/nginx/conf.d/
   authentication:
     container_name: authentication_api
     build: ./authentication
