add initial README

--- a/nginx/service.auth.conf
+++ b/nginx/service.auth.conf
@@ -5,7 +5,7 @@ upstream authentication {
 
 server {
     listen       4100;
-    server_name  localhost;
+    server_name  authentication;
     
     location / {
         proxy_pass http://authentication;
