--- a/services/users/package.json
+++ b/services/users/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api-gateway",
+  "name": "users",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,9 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "boom": "^7.2.2",
-    "h2o2": "^8.1.2",
-    "hapi": "^17.8.1",
-    "wreck": "^14.1.3"
+    "hapi": "^17.7.0"
   }
 }
